Error msg alignment fixed

--- a/inc/assets/css/astra-admin-menu-settings.css
+++ b/inc/assets/css/astra-admin-menu-settings.css
@@ -172,6 +172,7 @@
  */
 #message {
     display: block;
-    float: left;
-     width: 100%;
+    margin-left: 0;
+    /*float: left;
+    width: 100%;*/
 }
